removed Clippit from portfolio, fixed home component position

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,7 +16,7 @@
 .App-header {
   /* background-color: #282c34; */
   /* background-color: lightcoral; */
-  background-color: whitesmoke;
+  /* background-color: whitesmoke; */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
